k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helper
      app.kubernetes.io/instance: helper
      app.kubernetes.io/name: helper
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helper
        app.kubernetes.io/instance: helper
        app.kubernetes.io/name: helper
      annotations:
        co.elastic.logs/json.add_error_key: "true"
        co.elastic.logs/json.expand_keys: "true"
        co.elastic.logs/json.keys_under_root: "true"
        co.elastic.logs/json.overwrite_keys: "true"
    spec:
      containers:
        - name: helper
          image: hub.dextechnology.com/base/helper-mdm:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
      imagePullSecrets:
        - name: dexregistry
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
