k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helper
spec:
  ports:
    - name: helper
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: helper
    app.kubernetes.io/instance: helper
    app.kubernetes.io/name: helper
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
