k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helper-ingress
  namespace: helper
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'
spec:
  rules:
    - host: help.api-mdm.prox2.dex-it.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helper
                port:
                  number: 3000
